--- a/Fisher/app/src/main/res/layout/activity_dashboard.xml
+++ b/Fisher/app/src/main/res/layout/activity_dashboard.xml
@@ -140,13 +140,13 @@
                         app:cardCornerRadius="7dp"
                         card_view:cardUseCompatPadding="true">
                         <LinearLayout
-                            android:id="@+id/chatBot"
+                            android:id="@+id/sell"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:gravity="center"
                             android:orientation="vertical">
                             <ImageView
-                                android:id="@+id/img_chatBot"
+                                android:id="@+id/img_sell"
                                 android:layout_width="80dp"
                                 android:layout_height="80dp"
                                 android:padding="10dp"
